grammar.ebnf
program        ::= statement*

statement      ::= var_decl
                 | assignment
                 | print_stmt
                 | if_stmt
                 | while_stmt

var_decl       ::= "var" identifier ":" var_type ("=" expression)? ";"

assignment     ::= identifier "=" expression ";"

print_stmt     ::= "print" expression ";"

if_stmt        ::= "if" expression statement* ("else" statement*)? "end"

while_stmt     ::= "while" expression statement* "end"

expression     ::= term ((">"|"<"|">="|"<="|"==") term)*

term           ::= factor (("*"|"/"|"+"|"-") factor)*

factor         ::= integer
                 | identifier
                 | "(" expression ")"

identifier     ::= letter (letter | digit)*

integer        ::= digit+

letter         ::= [a-zA-Z]

digit          ::= [0-9]
